prusti/tests/verify/fail/no-annotations/never-type.rs
#![feature(never_type)]

extern crate prusti_contracts;

fn diverging() -> ! {
    panic!();  //~ ERROR panic!(..) statement might panic
}

fn main() {
}
